secret.yaml
  📄 secret.yaml

  apiVersion: v1
kind: Secret
metadata:
  name: web-secret
type: Opaque
stringData:
  USERNAME: admin
  PASSWORD: admin123

  📄 secret-pod.yaml

  apiVersion: v1
kind: Pod
metadata:
  name: web-secret-pod
  labels:
    app: web
spec:
  containers:
  - name: web-container
    image: harshalgit/web:v2
    ports:
    - containerPort: 80
📄 commands.md
         
          # Apply Secret
kubectl apply -f secret.yaml

# Verify Secret
kubectl get secret

# Secret Details
kubectl describe secret web-secret

# Create Pod
kubectl apply -f secret-pod.yaml

# Check Pod
kubectl get pods

# Pod Details
kubectl describe pod web-secret-pod

# Check Environment Variables
kubectl exec -it web-secret-pod -- printenv

kubectl exec -it web-secret-pod -- env

# Check USERNAME
kubectl exec -it web-secret-pod -- printenv USERNAME

# Check PASSWORD
kubectl exec -it web-secret-pod -- printenv PASSWORD

# Delete Pod
kubectl delete -f secret-pod.yaml

# Delete Secret
kubectl delete -f secret.yaml
